# MRTAlib

./: CMakeLists.txt  README.md
examples/: mission_performance.cpp  mission_test.cpp  test_monoround.cpp
include/: allocation.h  bid.h  custom_types.h  helper_functions.h  robot.h  task.h  taskmanager.h
resources/: robots.txt  robots2.txt  sample_tasks.txt
src/: allocation.cpp  bid.cpp  helper_functions.cpp  robot.cpp  task.cpp  taskmanager.cpp
